Fixed container and spacing issues for migration

--- a/css/common-forms.less
+++ b/css/common-forms.less
@@ -2,7 +2,7 @@
 // FORMS
 
 // Buttons
-.button,
+.button:not(.widget),
 .widget.feature .feature-bgimg .content button,
 .contactform button.btn,
 .widget.button button,
